# RacingSantanderSportsDataWebScraper

./: .gitignore  404.html  CNAME  DEPLOYMENT_GUIDE.md  README.md  README_API_SETUP.md  SUPABASE_SETUP_GUIDE.md  SYSTEM_EXPLANATION.md  SYSTEM_FLOWCHARTS.md  VERCEL_DEPLOYMENT.md  _redirects  config.example.js  footballAPIData.js  history.html  iframeSolution.html  index.html  matchData.js  package-lock.json  package.json  squad.html  styles.css  vercel.json
backend/: .env  API_ENDPOINTS.md  README.md  config.py  dependencies.py  fixtures.txt   main.py  pyproject.toml  requirements.txt  run.py  setup_db.sql  test_api.sh
backend/controllers/: __init__.py  football_controller.py  health_controller.py  items_controller.py  scraper_controller.py
backend/middleware/: __init__.py  cors.py  error_handling.py  logging.py
backend/models/: __init__.py  football.py  item.py
backend/services/: __init__.py  db_service.py  football_service.py  items_service.py  scraper_service.py
components/: footer.html  header.html
css/: footer.css  header.css  hero.css  squad.css
js/: components.js  router.js
pages/: history.html  squad.html
scraperFrontend/: API_SETUP_GUIDE.md
scraperFrontend/css/: hero.css  history.css
scraperFrontend/js/: components.js
scraperFrontend/src/: App.css  App.jsx
src/: App.css  App.jsx  index.css
src/components/: Footer.jsx  Header.css  Header.jsx  ScraperTest.jsx  footer-main.html  footer.html  header-main.html  header.html
src/data/: matchData.js
src/hooks/: useFootballAPI.js  useFootballData.js  useRacingAPI.js
styles/: styles.css
(+27 files in other folders)
